# Vibin

./: .env.example  .gitattributes  .gitignore  AGENTS.md  NOTICE.md  README.md  install.ps1  package.json  repomix-output.xml  tsconfig.json
landing-page/: index.html  styles.css
landing-page/.openai/: hosting.json
landing-page/cloudflare-dist/: script.js
src/: index.ts  installer.ts
src/agent/: agent.ts  context.ts  session.ts  system-prompt.ts  thinking.ts
src/api/: anthropic.ts  codex-auth.ts  codex-responses.ts  models.ts  openai-compatible.ts  provider.ts
src/cli/: app.ts  commands.ts  headless.ts  mcp.ts  theme.ts  ui.ts
src/config/: config.ts  mcp-config.ts  mcp-trust.ts
src/shared/: credential-store.ts  errors.ts  paths.ts  types.ts  updater.ts
src/tools/: definitions.ts  mcp-manager.ts  runner.ts
test/: anthropic.test.ts  codex-auth.test.ts  codex-responses.test.ts  config-recovery.test.ts  config.test.ts  context.test.ts  mcp-config.test.ts  mcp-manager.test.ts  mcp-trust.test.ts  models.test.ts  runner.test.ts
testing/: car-game.html
vibin-desktop/: package.json  vite.config.ts
vibin-desktop/frontend/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  app.html  chat.html  settings.html
vibin-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
vibin-desktop/src-tauri/beta-gui/: app.html  app.html.artifact.json  chat.html  chat.html.artifact.json  files.html  files.html.artifact.json
vibin-desktop/src-tauri/capabilities/: default.json
vibin-desktop/src-tauri/icons/: icon.icns
vibin-desktop/src-tauri/src/: lib.rs  main.rs
(+9 files in other folders)
