[package]
name = "vibin-desktop"
version = "0.1.0"
description = "Vibin desktop application (local web app)"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
base64 = "0.22"
webbrowser = "1"
wry = "0.24"
watch = "0.2.3"
